<resources>
    <string name="app_name">Bilingual Manga Reader</string>
    <string name="action_positive">Yes</string>
    <string name="action_negative">No</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copied text: %s</string>
    <string name="action_app_not_installed">Required App is not installed</string>
    <string name="action_scroll_up">Up</string>
    <string name="action_scroll_down">Down</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_copy_name">Copy name: %s</string>
    <string name="alert_permission_files_access_denied_title">Access denied</string>
    <string name="alert_permission_files_access_denied">It not possible to obtain the access permissions to the informed folder, please obtain access in android settings.</string>
    <string name="date_format_unknown">unknown</string>
    <string name="api_error">Error connecting to API</string>
    <string name="menu_search">Search</string>
    <string name="menu_libraries">Libraries</string>
    <string name="menu_library">Library</string>
    <string name="menu_history">History</string>
    <string name="menu_vocabulary">Vocabulary</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_config">Configuration</string>
    <string name="menu_grid_type">Grid type</string>
    <string name="config_title_library">Library</string>
    <string name="config_title_libraries">Libraries</string>
    <string name="config_title_sub_title">SubTitle</string>
    <string name="config_title_system">System</string>
    <string name="config_title_reader">Reader</string>
    <string name="config_title_file_link">File link</string>
    <string name="config_title_monitoring">Monitoring</string>
    <string name="config_title_database">Database</string>
    <string name="config_title_themes">Themes</string>
    <string name="config_switch_use_path_name_for_linked">Use page path to link pages?</string>
    <string name="config_switch_use_dual_page_calculate">Consider double page by calculating dimensions?</string>
    <string name="config_text_library_folder">Library folder</string>
    <string name="config_text_library_order">Library order</string>
    <string name="config_text_default_subtitle_language">Default language</string>
    <string name="config_text_default_subtitle_translate">Default translate</string>
    <string name="config_option_order_name">For name</string>
    <string name="config_option_order_date">For date</string>
    <string name="config_option_order_access">Last access</string>
    <string name="config_option_order_favorite">Favorite first</string>
    <string name="config_reading_show_clock_and_battery">Show clock and battery percent?</string>
    <string name="config_reading_use_magnifier_type">Use zoom in magnifying mode?</string>
    <string name="config_system_format_date">Date format</string>
    <string name="config_system_language">System language</string>
    <string name="config_option_date_time_format_0">Default (%s)</string>
    <string name="config_option_date_time_format_1" translatable="false">MM/dd/yy (%s)</string>
    <string name="config_option_date_time_format_2" translatable="false">dd/MM/yy (%s)</string>
    <string name="config_option_date_time_format_3" translatable="false">yyyy-MM-dd (%s)</string>
    <string name="config_tracker_checked">Checked</string>
    <string name="config_monitoring_disconnect">Do you want to disconnect from %1$s\?</string>
    <string name="config_monitoring_mal">My Anime List</string>
    <string name="config_database_last_backup">Last backup: %1$s\</string>
    <string name="config_database_backup">Backup</string>
    <string name="config_database_restore">Restore</string>
    <string name="config_database_select_file">Select DB File</string>
    <string name="config_database_invalid_file">Invalid selected file.</string>
    <string name="config_database_backup_success">Backup performed successfully.</string>
    <string name="config_database_restore_success">Restored backup successfully.</string>
    <string name="config_database_error_backup">An error occurred when generate backup file.</string>
    <string name="config_database_error_read_file">An error occurred when reading the file.</string>
    <string name="config_database_error_restore">An error occurred while restoring the informed backup, reverted to the original file.</string>
    <string name="config_database_error_new_database">An error occurred while restoring the backup and the previous version cannot be restored. A new base has been created.</string>
    <string name="config_theme_mode">Theme mode</string>
    <string-array name="theme_mode">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="themes">
        <item>Original</item>
        <item>Blood Red</item>
        <item>Blue</item>
        <item>Forest Green</item>
        <item>Green</item>
        <item>Neon Blue</item>
        <item>Neon Green</item>
        <item>Ocean Blue</item>
        <item>Pink</item>
        <item>Red</item>
    </string-array>
    <string name="config_libraries_title_libraries">Libraries</string>
    <string name="config_libraries_add_library">Add Library</string>
    <string name="config_libraries_delete_library">Delete Library</string>
    <string name="config_libraries_confirm_delete_library">Library</string>
    <string name="config_libraries_title_library">Library title</string>
    <string name="config_libraries_title_language">Library language</string>
    <string name="config_libraries_title_path">Library folder</string>
    <string name="config_libraries_title_library_required">Title required</string>
    <string name="config_libraries_title_path_required">Folder required</string>
    <string name="config_libraries_title_path_default">The folder has already been set as the default</string>
    <string name="languages_choice">Select language</string>
    <string name="languages_description">Language: %1$s</string>
    <string-array name="languages">
        <item>Portuguese</item>
        <item>English</item>
        <item>Japanese</item>
        <item>Translated Pt - Google</item>
    </string-array>
    <string name="reader_reload">Reload</string>
    <string name="reader_not_found">Not found</string>
    <string name="file_not_found">File not found</string>
    <string name="menu_view_mode">View Mode</string>
    <string name="menu_view_mode_aspect_fill">Aspect Fill</string>
    <string name="menu_view_mode_aspect_fit">Aspect Fit</string>
    <string name="menu_view_mode_fit_width">Fit Width</string>
    <string name="menu_reading_mode">Reading Mode</string>
    <string name="menu_reading_mode_left_to_right">Comics</string>
    <string name="menu_reading_mode_right_to_left">Manga</string>
    <string name="menu_reading_save_share_image">Save/Share image</string>
    <string name="menu_reading_favorite">Favorite</string>
    <string name="menu_reading_order">List order</string>
    <string name="menu_reading_order_change">Sort:</string>
    <string name="menu_reading_floating">Floating popup</string>
    <string name="menu_reading_floating_buttons">Floating buttons</string>
    <string name="menu_reading_options">Reading options</string>
    <string name="menu_reading_show_clock_and_battery">Clock and battery percent</string>
    <string name="menu_reading_use_magnifier_type">Magnifying zoom</string>
    <string name="menu_reading_view_touch">Touch functions</string>
    <string name="menu_reading_color">Page color</string>
    <string name="menu_reading_ocr_file_linked">Ocr and file linked</string>
    <string name="menu_reading_open_kaku">Open Kaku App</string>
    <string name="menu_reading_subtitle">Subtitle</string>
    <string name="menu_reading_file_link">File in another language</string>
    <string name="reading_button_screen_rotate">Screen rotate</string>
    <string name="reading_button_page_linked">Page linked</string>
    <string name="reading_button_subtitle">Subtitle</string>
    <string name="reading_button_color">Pages colors</string>
    <string name="reading_button_file_link">File link</string>
    <string name="reading_button_popup_floating">Popup floating</string>
    <string name="reading_button_next_file">Next file</string>
    <string name="reading_button_previous_file">Previous file</string>
    <string name="reading_button_menu_ocr">Menu OCR</string>
    <string name="reading_button_floating_buttons">Floating buttons</string>
    <string name="reading_page_index">Page index</string>
    <string name="reading_page_empty">File has no folders</string>
    <string name="reading_touch_demonstration_aspect_fit">Aspect Fill</string>
    <string name="reading_touch_demonstration_fit_width">Aspect Fit</string>
    <string name="reading_touch_demonstration_chapters">Open chapters list</string>
    <string name="reading_touch_demonstration_next_file">Next file</string>
    <string name="reading_touch_demonstration_previous_file">Previous file</string>
    <string name="reading_touch_demonstration_next_page">Next page</string>
    <string name="reading_touch_demonstration_previous_page">Previous page</string>
    <string name="open_app_kaku_not_founded">App Kaku not found.</string>
    <string name="reading_title_save_share_image">Save\Share image</string>
    <string name="reading_choice_save_image">Save</string>
    <string name="reading_choice_share_image">Share</string>
    <string name="reading_choice_share_chose_app">Choose app</string>
    <string name="ocr_tesseract_copy_data">Copying necessary data files, please wait…</string>
    <string name="ocr_tesseract_copy_data_done">Copy of Tesseracts data completed.</string>
    <string name="ocr_tesseract_get_request">Processing image, please wait…</string>
    <string name="ocr_google_vision_get_request">Communicating with google vision api, please wait…</string>
    <string name="ocr_google_vision_error">Processing could not be performed. Try again later.</string>
    <string name="page_link_popup_reorder_return">Return next pages here</string>
    <string name="page_link_popup_reorder_single_page">Reorder next pages single page</string>
    <string name="page_link_popup_reorder_dual_page">Reorder next pages dual pages</string>
    <string name="page_link_popup_reorder_auto_page">Reorder auto next pages</string>
    <string name="page_link_popup_reorder_not_linked">Get pages from not linked</string>
    <string name="page_link_popup_add_not_linked">Move to not linked</string>
    <string name="vocabulary_manga">Manga</string>
    <string name="menu_vocabulary_search">Search</string>
    <string name="menu_vocabulary_order">Order</string>
    <string name="menu_vocabulary_favorite">Favorite</string>
    <string name="about_app_name">Bilingual Manga Reader</string>
    <string name="about_app_version">Application version</string>
    <string name="about_app_rate_us">Rate now</string>
    <string name="about_app_shared">Shared</string>
    <string name="about_app_shared_and_rate_us">Evalue and recommend this app</string>
    <string name="about_app_shared_and_rate_us_description">Please give this app five stars if you like it, send us your opinion, it will be of great help. And if you wish, share this app with your friends.</string>
    <string name="about_app_author">Author</string>
    <string name="about_app_contact">Contact</string>
    <string name="about_app_contact_description">Contact us and send you suggestions or praises about your experience with the app.</string>
    <string name="about_app_suggestion">Suggestion</string>
    <string name="about_app_mail">E-Mail</string>
    <string name="about_app_library">Library\'s</string>
    <string name="about_app_author_name" translatable="false">Jhonny Salles</string>
    <string name="about_app_github" translatable="false">JhonnySalles</string>
</resources>