<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_about_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingTop="@dimen/default_navigator_header_margin_top"
    tools:context=".view.ui.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center|top"
            android:contentDescription="@string/about_app_name"
            android:src="@mipmap/app_icon" />

        <!-- Title, secondary and supporting text -->
        <TextView
            android:id="@+id/about_app_name"
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/about_app_name"
            android:textSize="@dimen/about_app_name" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/about_app_version"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:text="@string/about_app_version"
                    android:textSize="@dimen/about_content_size" />

                <TextView
                    android:id="@+id/about_app_version_number"
                    style="@style/TextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="@dimen/about_content_size" />

                <com.google.android.material.divider.MaterialDivider
                    style="@style/MaterialDivider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin" />

                <TextView
                    style="@style/TextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/about_app_author"
                    android:textSize="@dimen/about_title_size" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/about_app_author_name"
                    android:textSize="@dimen/about_content_size" />

                <com.google.android.material.divider.MaterialDivider
                    style="@style/MaterialDivider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin" />

                <TextView
                    style="@style/TextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/about_app_shared_and_rate_us"
                    android:textSize="@dimen/about_title_size" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/about_app_shared_and_rate_us_description"
                    android:textSize="@dimen/about_content_size" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:stretchMode="columnWidth">

                    <Button
                        android:id="@+id/about_btn_rate_us"
                        style="@style/Button"
                        android:layout_width="@dimen/about_button_width_big"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/about_app_rate_us"
                        android:textSize="@dimen/about_button_text_size"
                        app:icon="@drawable/ic_rate_us"
                        app:iconGravity="start" />

                    <Button
                        android:id="@+id/about_btn_shared"
                        style="@style/Button"
                        android:layout_width="@dimen/about_button_width_big"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/about_app_shared"
                        android:textSize="@dimen/about_button_text_size"
                        app:icon="@drawable/ic_shared" />
                </GridLayout>

                <com.google.android.material.divider.MaterialDivider
                    style="@style/MaterialDivider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin" />

                <TextView
                    style="@style/TextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/about_app_contact"
                    android:textSize="@dimen/about_title_size" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/about_app_contact_description"
                    android:textSize="@dimen/about_content_size" />


                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:columnCount="2"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:stretchMode="columnWidth">

                    <Button
                        android:id="@+id/about_btn_suggestion"
                        style="@style/Button"
                        android:layout_width="@dimen/about_button_width_big"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/about_app_suggestion"
                        android:textSize="@dimen/about_button_text_size"
                        app:icon="@drawable/ic_suggestion" />

                    <Button
                        android:id="@+id/about_btn_email"
                        style="@style/Button"
                        android:layout_width="@dimen/about_button_width_big"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/about_app_mail"
                        android:textSize="@dimen/about_button_text_size"
                        app:icon="@drawable/ic_mail"/>

                    <Button
                        android:id="@+id/about_btn_github"
                        style="@style/Button"
                        android:layout_width="@dimen/about_button_width_big"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/about_app_github"
                        android:textSize="@dimen/about_button_text_size"
                        app:icon="@drawable/ic_web_page" />
                </GridLayout>

                <com.google.android.material.divider.MaterialDivider
                    style="@style/MaterialDivider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin" />

                <TextView
                    style="@style/TextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/about_app_library"
                    android:textSize="@dimen/about_title_size" />

                <TextView
                    android:id="@+id/about_app_library"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:linksClickable="true"
                    android:paddingTop="5dp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>